# dogs_breed_det

./: .stestr.conf  Jenkinsfile  README.md  requirements.txt  setup.cfg  tox.ini
docs/: conf.py  index.rst
dogs_breed_det/: config.py  sys_info.py
dogs_breed_det/dataset/: data_utils.py  make_dataset.py
dogs_breed_det/features/: build_features.py
dogs_breed_det/models/: deep_api.py  model_utils.py
dogs_breed_det/tests/: test_func_model.py  test_unit_dataset.py  test_unit_model.py
dogs_breed_det/visualization/: visualize.py
notebooks/: 1.0-dogs_breed_det_start.ipynb
