# -*- coding: utf-8 -*-
[metadata]
name = dogs_breed_det
summary = This is investigation on deepaas from corestack
description-file =
    README.md
author = Hem Chandra Padhalni
author-email = hem.chandra@corestack.io
version = 0.0.1
license = No license file
home-page = https://github.com/shramanpadhalni-web/dogs_breed_det
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    dogs_breed_det

[entry_points]

deepaas.v2.model = 
    dogs_breed_det = dogs_breed_det.models.deep_api

